--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 <body>
 <header>
     <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">Наше приложение</a>
+        <a class="navbar-brand" href='/chat'>Наш чатик💕</a>
         {% if current_user.is_authenticated %}
                 <a class="navbar-brand" href="/logout">{{ current_user.name}}</a>
                 <a href="news" class="btn btn-secondary">Добавить новость</a>
