--- a/templates/CHAT.html
+++ b/templates/CHAT.html
@@ -1,7 +1,7 @@
-<h1>Real Time Messaging</h1>
+<h1>Чатик💌</h1>
 <pre id="messages" style="height: 400px; overflow: scroll"></pre>
-<input type="text" id="messageBox" placeholder="Type your message here" style="display: block; width: 100%; margin-bottom: 10px; padding: 10px;" />
-<button id="send" title="Send Message!" style="width: 100%; height: 30px;">Send Message</button>
+<input type="text" id="messageBox" placeholder="Напиши своему котёнку" style="display: block; width: 100%; margin-bottom: 10px; padding: 10px;" />
+<button id="send" title="Send Message!" style="width: 100%; height: 30px;">Отправить котопосылку</button>
 
 <script>
   (function() {
