--- a/templates/CHAT.html
+++ b/templates/CHAT.html
@@ -1,4 +1,5 @@
 <h1>Чатик💌</h1>
+<a class="navbar-brand" href='/' >Вернуться на форум</a>
 <pre id="messages" style="height: 400px; overflow: scroll"></pre>
 <input type="text" id="messageBox" placeholder="Напиши своему котёнку" style="display: block; width: 100%; margin-bottom: 10px; padding: 10px;" />
 <button id="send" title="Send Message!" style="width: 100%; height: 30px;">Отправить котопосылку</button>
